# courses

./: Introducción al c++ moderno.ppt
basic-c++/: #introduccion-c++-moderno.pdf#  introduccion-c++-moderno.org  introduccion-c++-moderno.org~  introduccion-c++-moderno.tex  introduccion-c++-moderno.tex~
basic-c++/_minted-introduccion-c++-moderno/: 0066B8A8243A01C1C8F50704ED1BF470C56FFB0379D3FB0B3DDD44C2C3E31D8D.pygtex  0BA261C349C3E718621AB1575B230EA6C56FFB0379D3FB0B3DDD44C2C3E31D8D.pygtex  133A88334DB29FD2E79BA085F738F129C56FFB0379D3FB0B3DDD44C2C3E31D8D.pygtex  137C228BB73D4521A466C83E9A87D47BC56FFB0379D3FB0B3DDD44C2C3E31D8D.pygtex  19B4C1EAE5BDE518BA14862D873BBAC5C56FFB0379D3FB0B3DDD44C2C3E31D8D.pygtex  1BFC84DB1D263E262B9382B557921BE26B713FD0E6086156F4D2FAA06597DFA8.pygtex  20E34460D60908206DA244AF0EE0E436C56FFB0379D3FB0B3DDD44C2C3E31D8D.pygtex  23EFFEB8BC45AB9E63F9A9F7107CD394C56FFB0379D3FB0B3DDD44C2C3E31D8D.pygtex  26A6C8C1129CA8BC93C5009AE7E85DF9C56FFB0379D3FB0B3DDD44C2C3E31D8D.pygtex  (+41 more)
basic-c++/dia/: namespaces.dia
basic-c++/examples/concurrency/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  imageConcurrency  imageConcurrency.cpp  imageConcurrency.cpp~
cpp-advenced-topics/: ListAndVector  ListAndVector.cpp  ListAndVector.cpp~  Makefile  log.txt
cpp17/ListAndVector/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  ListAndVector  ListAndVector.cpp  ListAndVector.cpp~  Makefile  cmake_install.cmake
cpp20/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  CTestTestfile.cmake  Makefile  cmake_install.cmake  trial  trial.cpp
(+80 files in other folders)
